test/corpus/L1/negative/unexpected-token-assign.st
"---
kind: negative
section: error.unexpected-token
codes: E_UNEXPECTED_TOKEN
note: := is not valid Smalltalk assignment syntax (use <- or :=  only in blocks? no — parse rejects bare :=)
---"
3 := 4
